# planeworld

./: .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  README.md  SETENV  libdeps.txt  planeworld.kdev4
data/: CMakeLists.txt  config.xml  debris_test.xml  earth.xml  jupiter.xml  lagrange4.xml  moon.xml  outer_planet.xml  physics_interface.lua  solar_system.xml  sun.xml  terrain_test.xml  test.fig  test.lua  test.xml
data/jpl/: earth.xml  jupiter.xml  mars.xml  mercury.xml  moon.xml  neptune.xml  saturn.xml  solar_system.xml  sun.xml  uranus.xml  venus.xml
data/lua/: pw_input_default.lua
data/shader/: cam_widget_default.frag  composition.frag  composition.vert  main_screen.frag  main_screen.vert  render_to_screen.frag  shader.frag
data/test/: angular_velocity_test.xml  component_thruster_test.xml  emitter_test.xml  example_01.lua  inertia_and_com_test.xml  lua_interface_text.xml  pw_input_default.lua  solar_system_test.xml
doc/continuous_collision_detection/: ccd.tex  circ_circ_01.fig  header.tex
include/: .directory  adams_bashforth_integrator.h  adams_bashforth_integrator.tpp  adams_moulton_integrator.h  adams_moulton_integrator.tpp  body.h  bounding_box.h  camera.h  circle_visuals.h  collision_manager.h  com_interface.h  com_interface.tpp  conf_pw.h  contact.h  engine_common.h  engine_manager.h  euler_integrator.h  euler_integrator.tpp  graphics.h  hookable.h  hooker.h  hooker_positional.h  integrator.h  joint.h  kinematics_state.h  kinematics_state_user.h  lua_manager.h  namegenerator.h  object.h  object_referrer.h  parzival.h  physics_manager.h  planet.h  pointmass.h  polyline_visuals.h  rectangle_visuals.h  spring_visuals.h  star_system.h  thread_module.h  trajectory.h  (+10 more)
pw_core/: CMakeLists.txt
pw_core/logging/: conf_log.h  log.cpp  log_defines.h  timer.cpp  timer.h
pw_graphics/: CMakeLists.txt
pw_graphics/core/: font_manager.cpp  font_manager.h  graphics.cpp  graphics.h  render_mode.cpp  render_mode.h  render_target.cpp  render_target.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  text.cpp  text.h  texture.cpp  texture.h
pw_graphics/inc/: glwidget.h  graphics.h
pw_graphics/shapes/: circle.cpp  circle.h  polyline.cpp  polyline.h  random_line.cpp  random_line.h  rectangle.cpp  rectangle.h  shape.h
pw_graphics/src/: CMakeLists.txt  glwidget.cpp  graphics.cpp  main.cpp
pw_graphics/visuals/: camera.cpp  camera.h  camera_entity.h  circle_visuals.cpp  circle_visuals.h  debris_visuals.cpp  debris_visuals.h  debris_visuals_thruster.cpp  debris_visuals_thruster.h  object_visuals.cpp  object_visuals.h  planet_visuals.cpp  planet_visuals.h  polygon_visuals.cpp  polygon_visuals.h  polyline_visuals.cpp  polyline_visuals.h  rectangle_visuals.cpp  spring_visuals.cpp  spring_visuals.h  terrain_visuals.cpp  terrain_visuals.h  uid_visuals.cpp  uid_visuals.h  uid_visuals_user.h  visuals.cpp  visuals.h  visuals_data_storage.cpp  visuals_data_storage.h  visuals_data_storage_user.h  visuals_manager.cpp  visuals_manager.h
pw_graphics/window_management/: font_user.h  widget.h  widget_cam.cpp  widget_cam.h  widget_console.cpp  widget_console.h  widget_text.cpp  widget_text.h  win_frame_user.cpp  win_frame_user.h  window.cpp  window.h
pw_io/: game_state_manager.cpp  game_state_manager.h  input_manager.cpp  input_manager.h  parzival.cpp  parzival.h
pw_io/import/: xfig_loader.cpp  xfig_loader.h  xml_importer.cpp  xml_importer.cpp~  xml_importer.h  xml_importer.h~
pw_physics/components/: thruster.cpp  thruster.h
pw_physics/core/: collision_manager.cpp  collision_manager.h  contact.h  debris_emitter.cpp  debris_emitter.h  emitter.h  emitter_handled.h  kinematics_state.cpp  kinematics_state.h  kinematics_state_user.h  objects_emitter.cpp  objects_emitter.h  particle_emitter.cpp  particle_emitter.h  particle_emitter_base.cpp  particle_emitter_base.h  physics_manager.cpp  physics_manager.h  sim_timer.cpp  sim_timer.h  trajectory.h
pw_physics/geometry/: bounding_box.cpp  bounding_box.h  circle.cpp  circle.h  double_buffered_shape.cpp  double_buffered_shape.h  geometry.cpp  geometry.h  planet.cpp  planet.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shape_subtypes.h  terrain.cpp  terrain.h
pw_physics/joints/: joint.h  spring.cpp  spring.h
pw_system/: CMakeLists.txt  build_time_formatter.h  com_console.cpp  com_console.h  com_interface.cpp  com_interface.h  com_interface.tpp  com_interface_provider.h  com_interface_user.h  engine_common.h  entity.h  handle_mixin.h  lua_manager.cpp  lua_manager.h  planeworld.cpp  serializable.cpp  serializable.h  serialize_macros.h  serializer.h  serializer_basic.h  spinlock.cpp  spinlock.h  thread_module.cpp  thread_module.h
pw_testing/: CMakeLists.txt  integration_test.cpp
pw_unit/: CMakeLists.txt  pw_eval_multithreading.cpp  pw_unit_handle.cpp  pw_unit_multi_buffer.cpp  pw_unit_triple_buffer.cpp  pw_unit_uid.cpp  star_map_ut.cpp  universe_ut.cpp
pw_util/: CMakeLists.txt  key_map.h
pw_util/logging/: CMakeLists.txt  conf_log.h  log.cpp  log.h  log_common_types.h  log_defines.h  log_exception.h  log_listener.h  timer.cpp  timer.h
src/: .directory  CMakeLists.txt  adams_bashforth_integrator.cpp  adams_moulton_integrator.cpp  body.cpp  bounding_box.cpp  camera.cpp  circle_visuals.cpp  collision_manager.cpp  com_console.cpp  engine_manager.cpp  euler_integrator.cpp  geometry.cpp  graphics.cpp  hooker.cpp  kinematics_state.cpp  lua_manager.cpp  namegenerator.cpp  object.cpp  parzival.cpp  physics_manager.cpp  planet.cpp  planet_visuals.cpp  planeworld.cpp  pointmass.cpp  polyline_visuals.cpp  rectangle_visuals.cpp  rigidbody.cpp  spring.cpp  spring_visuals.cpp  star_system.cpp  thread_module.cpp  unique_id.cpp  universe.cpp  visuals_manager.cpp  world_data_storage.cpp  xfig_loader.cpp
testing/: CMakeLists.txt
testing/performance/gl/: CMakeLists.txt  font.frag  gl_test.cpp  pw_gl_test_buffers.cpp  pw_gl_test_font_rendering.cpp  pw_gl_test_render_to_texture.cpp  render_to_screen.frag  render_to_screen.vert  shader.frag  shader.vert
tools/: calcOrbit  convert.js
(+169 files in other folders)
