cmake_minimum_required(VERSION 3.1)

SET(CMAKE_CXX_FLAGS "-std=c++14 -mtune=native -Wall -Wextra -pedantic" CACHE STRING "")

SET(DEFAULTDATADIR ${CMAKE_INSTALL_PREFIX}/share/planeworld)
ADD_DEFINITIONS(-DDEFAULTDATADIR="${DEFAULTDATADIR}")

PROJECT (planeworld)

OPTION(COMPILE_UNIT_TESTS "Compile unit tests. " OFF)

IF(COMPILE_UNIT_TESTS)
    ADD_SUBDIRECTORY(pw_unit)
ENDIF(COMPILE_UNIT_TESTS)

ADD_SUBDIRECTORY(pw_util)
ADD_SUBDIRECTORY(pw_system)
ADD_SUBDIRECTORY(testing)
ADD_SUBDIRECTORY(data)

#INSTALL (FILES SETENV DESTINATION .)
